--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.5.0",
     "vue": "^2.5.11"
   },
   "browserslist": [
