--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jquery": "^3.5.1",
     "layui-src": "^2.5.5",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.2",
+    "sass": "^1.26.10",
+    "sass-loader": "^7.3.1",
+    "sass-resources-loader": "^2.0.3",
     "vue": "^2.6.11",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
