--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
-    "layui-src": "^2.5.5"
+    "layui-src": "^2.5.5",
+    "vant": "^2.9.4"
   },
   "browserslist": [
     "> 1%",
